--- a/index.html
+++ b/index.html
@@ -537,243 +537,7 @@
           <p class="flex-grow-1">
             Copyright &copy; 2025 | Design Inspiration By Styleshout
           </p>
-          <div class="hSince there is no selected code, I will provide a general improvement to the HTML structure and add some accessibility features. Here's the modified code:
-
-```html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
-    rel="stylesheet"
-  />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Poppins:wght@300;400;600;700&display=swap"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="css/font-awesome.css" />
-  <link rel="stylesheet" href="css/bootstrap.css" />
-  <link rel="stylesheet" href="css/lightbox.min.css" />
-  <link rel="stylesheet" href="css/styles.css" />
-  <title>Adeyemi Ayorinde | Web Developer</title>
-</head>
-<body>
-  <header class="header vh-100 text-center position-relative" role="banner">
-    <div
-      class="text-container position-relative d-flex flex-column justify-content-center align-items-center h-100"
-    >
-      <h5 class="text-primary fs-3 fw-bold text-uppercase">Hello, World.</h5>
-      <h1 id="typing-text" class="display-1 fw-bold text-white"></h1>
-      <p class="roles text-white text-uppercase fs-4">
-        <span>Fullstack Web Developer |</span>
-        <span>App Developer</span>
-      </p>
-      <a href="#about" class="btn btn-outline-light btn-lg mt-3">
-        <div class="d-flex">
-          <div class="me-3">
-            <i class="fas fa-chevron-down"></i>
-          </div>
-          <div class="text-start">
-            <span>Read More About Me</span>
-          </div>
-        </div>
-      </a>
-      <div class="social d-flex gap-3 position-absolute">
-        <a href="#">
-          <i class="fab fa-twitter fa-3x text-white"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-facebook fa-3x text-white"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-linkedin fa-3x text-white"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-instagram fa-3x text-white"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-github fa-3x text-white"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-youtube fa-3x text-white"></i>
-        </a>
-      </div>
-    </div>
-  </header>
-  <!-- About -->
-  <section id="about" class="about bg-light py-5" role="region">
-    <div class="container">
-      <div class="text-center">
-        <h4 class="text-uppercase fw-bold text-primary">About Me</h4>
-        <hr class="w-25 mx-auto" />
-        <h2 class="mb-4">Let Me Introduce Myself.</h2>
-      </div>
-      <div class="about-content d-flex gap-5 align-items-center h-100">
-        <img
-          src="images/ade.png"
-          alt="Adeyemi Ayorinde"
-          class="about-img img-fluid rounded-circle"
-        />
-        <p class="lead">
-          I am a fullstack web developer with over 7 years of experience in
-          building web and mobile applications. I specialize in Javascript,
-          Python, React, Node, Express, Django, and more. I have a passion for
-          building applications that are user-friendly and scalable. I am also
-          an app developer with experience in building mobile applications
-          using Flutter. I am always looking for new opportunities to work on
-          exciting projects.
-        </p>
-      </div>
-    </div>
-  </section>
-  <!-- Profile and Skills -->
-  <section class="profile my-6" role="region">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h3 class="text-uppercase fw-bold">Profile</h3>
-          <p>
-            I have here a brief profile of myself to help you get to know me
-            better.
-          </p>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item mb-3">
-              <h5 class="text-transform">
-                <i class="fas fa-user text-primary"></i> Full Name:
-              </h5>
-              <p>Adeyemi Ayorinde Joshua</p>
-            </li>
-            <li class="list-group-item mb-3">
-              <h5 class="text-transform">
-                <i class="fas fa-calendar text-primary"></i> Birth Date:
-              </h5>
-              <p>18th December, 1997</p>
-            </li>
-            <li class="list-group-item mb-3">
-              <h5 class="text-transform">
-                <i class="fas fa-building text-primary"></i> Position:
-              </h5>
-              <p>Owner and Lead Developer at Cedar Creative Technology</p>
-            </li>
-            <li class="list-group-item mb-3">
-              <h5 class="text-transform">
-                <i class="fas fa-home text-primary"></i> Website:
-              </h5>
-              <p>cedarcreativetech.com</p>
-            </li>
-            <li class="list-group-item mb-3">
-              <h5 class="text-transform">
-                <i class="fas fa-envelope text-primary"></i> Email:
-              </h5>
-              <p>mailer.ayorinde.adeyemi@gmail.com</p>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <h3 class="text-uppercase fw-bold">Skills</h3>
-          <p class="mb-4">
-            Here are some of the skills I have acquired over the years.
-          </p>
-          <div class="skills">
-            <div class="skill">
-              <h5><i class="fas fa-check"></i> HTML</h5>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-primary"
-                  style="width: 100%"
-                  role="progressbar"
-                  aria-valuenow="100"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                >
-                  100%
-                </div>
-              </div>
-            </div>
-            <div class="skill">
-              <h5><i class="fas fa-check"></i> CSS</h5>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-primary"
-                  style="width: 85%"
-                  role="progressbar"
-                  aria-valuenow="85"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                >
-                  85%
-                </div>
-              </div>
-            </div>
-            <div class="skill">
-              <h5><i class="fas fa-check"></i> Javascript</h5>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-primary"
-                  style="width: 80%"
-                  role="progressbar"
-                  aria-valuenow="80"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                >
-                  80%
-                </div>
-              </div>
-            </div>
-            <div class="skill">
-              <h5><i class="fas fa-check"></i> React</h5>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-primary"
-                  style="width: 75%"
-                  role="progressbar"
-                  aria-valuenow="75"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                >
-                  75%
-                </div>
-              </div>
-            </div>
-            <div class="skill">
-              <h5><i class="fas fa-check"></i> Bootstrap</h5>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-primary"
-                  style="width: 100%"
-                  role="progressbar"
-                  aria-valuenow="100"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                >
-                  100%
-                </div>
-              </div>
-            </div>
-            <div class="skill">
-              <h5><i class="fas fa-check"></i> Flutter</h5>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-primary"
-                  style="width: 70%"
-                  role="progressbar"
-                  aria-valuenow="70"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                >
-                  70%
-                </div>
-              </div>
-            </div>
-            <div class="skill">
-              <h5><i class="fas fa-check"></i> Python</h5>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-primary"
-                  stylestack gap-3">
+          <div class="hstack gap-3">
             <a class="text-decoration-none" href="#">
               <i class="fab fa-facebook fa-2x text-white"></i>
             </a>
