--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/lightbox.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Adeyemi Ayorinde | Web Developer</title>
+    <title>Ahmed | Web Developer</title>
   </head>
   <body>
     <header class="header vh-100 text-center position-relative">
       <div
         class="text-container position-relative d-flex flex-column justify-content-center align-items-center h-100"
       >
-        <h5 class="text-primary fs-3 fw-bold text-uppercase">Hello, World.</h5>
+        <h5 class="text-primary fs-3 fw-bold text-uppercase">Hello, Clients.</h5>
         <h1 id="typing-text" class="display-1 fw-bold text-white"></h1>
         <p class="roles text-white text-uppercase fs-4">
           <span>Web Developer |</span>
@@ -70,11 +70,11 @@
           <h2 class="mb-4">Let Me Introduce Myself.</h2>
         </div>
         <div class="about-content d-flex gap-5 align-items-center h-100">
-          <img
+          <!-- <img
             src="images/ade.png"
             alt=""
             class="about-img img-fluid rounded-circle"
-          />
+          /> -->
           <p class="lead">
             I am a web developer with over 2 years of experience in
             building web and mobile applications. I specialize in Bootstrap, Javascript,
@@ -101,31 +101,31 @@
                 <h5 class="text-transform">
                   <i class="fas fa-user text-primary"></i> Full Name:
                 </h5>
-                <p>Adeyemi Ayorinde Joshua</p>
+                <p> Ahmed S.</p>
               </li>
-              <li class="list-group-item mb-3">
+              <!-- <li class="list-group-item mb-3">
                 <h5 class="text-transform">
                   <i class="fas fa-calendar text-primary"></i> Birth Date:
                 </h5>
                 <p>18th December, 1997</p>
-              </li>
+              </li> -->
               <li class="list-group-item mb-3">
                 <h5 class="text-transform">
                   <i class="fas fa-building text-primary"></i> Position:
                 </h5>
                 <p>Owner and Lead Developer at Cedar Creative Technology</p>
               </li>
-              <li class="list-group-item mb-3">
+              <!-- <li class="list-group-item mb-3">
                 <h5 class="text-transform">
                   <i class="fas fa-home text-primary"></i> Website:
                 </h5>
                 <p>cedarcreativetech.com</p>
-              </li>
+              </li> -->
               <li class="list-group-item mb-3">
                 <h5 class="text-transform">
                   <i class="fas fa-envelope text-primary"></i> Email:
                 </h5>
-                <p>mailer.ayorinde.adeyemi@gmail.com</p>
+                <p>mahditech02@gmail.com</p>
               </li>
             </ul>
           </div>
@@ -170,13 +170,13 @@
                 <div class="progress mb-4">
                   <div
                     class="progress-bar bg-primary"
-                    style="width: 80%"
+                    style="width: 90%"
                     role="progressbar"
-                    aria-valuenow="80"
+                    aria-valuenow="90"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   >
-                    80%
+                    90%
                   </div>
                 </div>
               </div>
@@ -185,13 +185,13 @@
                 <div class="progress mb-4">
                   <div
                     class="progress-bar bg-primary"
-                    style="width: 75%"
+                    style="width: 95%"
                     role="progressbar"
-                    aria-valuenow="75"
+                    aria-valuenow="95"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   >
-                    75%
+                    95%
                   </div>
                 </div>
               </div>
@@ -250,9 +250,9 @@
               class="btn btn-outline-dark btn-lg text-uppercase px-5 mx-3 my-2"
               >Hire me now</a
             >
-            <a href="download/Ayorinde-CV.pdf" class="btn btn-dark btn-lg text-uppercase px-5 mx-3 my-2"
+            <!-- <a href="download/Ayorinde-CV.pdf" class="btn btn-dark btn-lg text-uppercase px-5 mx-3 my-2"
               >Download CV</a
-            >
+            > -->
           </div>
         </div>
       </div>
