--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/lightbox.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Ahmed | Web Developer</title>
+    <title>Cedar | Web Developer</title>
   </head>
   <body>
     <header class="header vh-100 text-center position-relative">
@@ -101,7 +101,7 @@
                 <h5 class="text-transform">
                   <i class="fas fa-user text-primary"></i> Full Name:
                 </h5>
-                <p> Ahmed S.</p>
+                <p> Ayorinde Joshua Adeyemi</p>
               </li>
               <!-- <li class="list-group-item mb-3">
                 <h5 class="text-transform">
