--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <h5 class="text-transform">
                   <i class="fas fa-envelope text-primary"></i> Email:
                 </h5>
-                <p>mahditech02@gmail.com</p>
+                <p>mailer.ayorinde.adeyemi@gmail.com</p>
               </li>
             </ul>
           </div>
